--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ locale                   : "en-US"
 title                    : "Arec_Rui"
 title_separator          : "-"
 name                     : "Liang Zerui"
-description              : "A student."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "This is a personal website of Mr. Liang Zerui. This website is designed to collect all the learning notes."
+url                      : "https://arecrui.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
