Change of homepage

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ description              : "This is a personal website of Mr. Liang Zerui. This 
 url                      : "https://arecrui.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
-teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
-# breadcrumbs            : false # true, false (default)
+teaser                   : "1111.jpg"# filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", custom"
@@ -65,30 +65,30 @@ google_ad_slot           :
 author:
   name             : "Liang Zerui"
   avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "A Student"
+  location         : "Hong Kong"
   email            :
   uri              :
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "https://www.facebook.com/zeruiliang"
   foursquare       :
-  github           :
+  github           : "https://github.com/ArecRui"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/liangzerui"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : "https://twitter.com/LiangZerui"
   vine             :
-  weibo            :
+  weibo            : ""
   xing             :
   youtube          :
 
