Fix bug for social media links

--- a/_config.yml
+++ b/_config.yml
@@ -73,20 +73,20 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/zeruiliang"
+  facebook         : "zeruiliang"
   foursquare       :
-  github           : "https://github.com/ArecRui"
+  github           : "ArecRui"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/liangzerui"
+  linkedin         : "liangzerui"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/LiangZerui"
+  twitter          : "LiangZerui"
   vine             :
   weibo            : ""
   xing             :
