Added Weibo Address

--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   tumblr           :
   twitter          : "LiangZerui"
   vine             :
-  weibo            : ""
+  weibo            : "/u/1053950964/home?wvr=5"
   xing             :
   youtube          :
 
