--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,10 @@
 # main links links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "About me"
+    url: 
 
-  - title: "About"
-    url: https://mmistakes.github.io/minimal-mistakes/
+  - title: "About my projects"
+    url: 
 
-  - title: "Sample Posts"
-    url: https://mmistakes.github.io/minimal-mistakes/year-archive/
-
-  - title: "Sample Pages"
-    url: https://mmistakes.github.io/minimal-mistakes/page-archive/
-
-  - title: "Sample Collections"
-    url: https://mmistakes.github.io/minimal-mistakes/collection-archive/
+  - title: "Learning Notes"
+    url: 
