--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links links
 main:
-  - title: "Home"
+  - title: "Recent Posts"
     url: https://arecrui.github.io/
 
-  - title: "About me"
+  - title: "Resume"
     url: 
 
-  - title: "About my projects"
-    url: 
+  - title: "Portfolio"
+    url: /portfolio
 
   - title: "Learning Notes"
     url: 
