--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Resume"
     url: 
 
-  - title: "Portfolio"
-    url: /portfolio
+  - title: "Portfolios"
+    url: /portfolio.html
 
   - title: "Learning Notes"
     url: 
