--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: 
 
   - title: "Portfolio"
-    url: https://arecrui.github.io/portfolio.html
+    url: /portfolio/
 
   - title: "Learning Notes"
     url: 
