--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Recent Posts"
-    url: https://arecrui.github.io/
+    url: https://arecrui.github.io/recentposts/
 
   - title: "Resume"
     url: 
