--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: https://arecrui.github.io/recentposts/
 
   - title: "Resume"
-    url: https://arecrui.github.io/resume/
+    url: 
 
   - title: "Portfolio"
     url: https://arecrui.github.io/portfolio/
