--- a/_config.yml
+++ b/_config.yml
@@ -215,7 +215,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: true
       share: true
