--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Henry Liang"
+title                    : "Henry"
 title_separator          : "-"
-name                     : "Henry Liang"
+name                     : "Henry"
 description              : "This is a personal website of Mr. Henry Liang. This website is designed to collect all the learning notes."
-url                      : "https://www.liangzerui.com" #the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://www.liangzerui.com" #"http://127.0.0.1:4000/"  #the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
