--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: "Academic Research"
+  - title: "Research"
     url: /docs/research/
 
-  - title: "Techniques"
-    url: https://arecrui.github.io/tech/
+  - title: "Technology"
+    url: /docs/tech/
 
-  - title: "Art Related"
-    url: https://arecrui.github.io/art/
+  - title: "Art"
+    url: /docs/art/
 
   - title: "Portfolio"
     url: /portfolio/
 
   - title: "Resume"
-    url: https://arecrui.github.io/resume/
+    url: /docs/resume/
 
 foo:
   - title: "Parent Link 1"
